--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: Nova
   - board: nice_nano_v2
-    shield: corne_right
+    shield: Nova
   - board: nice_nano_v2
     shield: settings_reset
