Update build yaml file again

--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: Nova
+    shield: Nova_left
   - board: nice_nano_v2
-    shield: Nova
+    shield: Nova_right
   - board: nice_nano_v2
     shield: settings_reset
